--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "40fe7232",
+   "id": "ff4abd23",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1f48d960",
+   "id": "1d12e388",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f48851e6",
+   "id": "8edcba50",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "12224521",
+   "id": "5130db1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cc75e93",
+   "id": "06208645",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "01549b7e",
+   "id": "60340d21",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91ae9d87",
+   "id": "0a581b0e",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "69c0b220",
+   "id": "ffe6fd90",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b0c0184",
+   "id": "b1bd5993",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1df98cb3",
+   "id": "d1352f2d",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "299e9098",
+   "id": "cf76a539",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9d7b60b3",
+   "id": "b904df72",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "256e83f4",
+   "id": "6b1478be",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f2b74442",
+   "id": "33e4a742",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2f3379ff",
+   "id": "c9fa9ddd",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1340f60",
+   "id": "7531e1d0",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "15f17159",
+   "id": "ca9b3b29",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3fd5b838",
+   "id": "0c43ecc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "0db3ec78",
+   "id": "b74c4425",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "6e15b9f6",
+   "id": "341e9544",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "55f3e056",
+   "id": "199ae3f3",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "bbabb345",
+   "id": "ec5a874f",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "acfc28e9",
+   "id": "cd079ac5",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "3ce76f92",
+   "id": "f1248a3d",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "5182b760",
+   "id": "8e01a0e2",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "50e12f75",
+   "id": "46c6894a",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "6db43437",
+   "id": "a4965f22",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7725c764",
+   "id": "12d4050e",
    "metadata": {},
    "source": [
     "# Exercise: Name triangles\n",
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "5ff1f352",
+   "id": "96ef1ce1",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "aa7d3ceb",
+   "id": "70416022",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "7a21de1a",
+   "id": "04e4689b",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddd32b79",
+   "id": "22b410c6",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "ac46dc74",
+   "id": "d56e087d",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "8efd5f80",
+   "id": "21f0c456",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f966975",
+   "id": "dcc3e7ba",
    "metadata": {},
    "source": [
     "# `while` loops\n",
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "c71639a1",
+   "id": "632ad9d8",
    "metadata": {
     "scrolled": true
    },
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81a53914",
+   "id": "f26d5c06",
    "metadata": {},
    "source": [
     "# Exercise: Sum to 100\n",
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "0faf7b00",
+   "id": "575930c5",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f619144",
+   "id": "68dd39bf",
    "metadata": {},
    "source": [
     "# `isdigit` is a *string* method\n",
@@ -979,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "3601d608",
+   "id": "7f4580e7",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b4aa3cb",
+   "id": "44b820b0",
    "metadata": {},
    "source": [
     "# Full list of methods on strings\n",
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e47b66ad",
+   "id": "644315ad",
    "metadata": {},
    "source": [
     "# Controlling our loops\n",
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "008e5ed3",
+   "id": "2a505121",
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87721e76",
+   "id": "3cd17f4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "3d1275f8",
+   "id": "06cbcaaa",
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7405ca3c",
+   "id": "69cf0da4",
    "metadata": {},
    "source": [
     "# Exercise: Sum digits\n",
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "7889d154",
+   "id": "46aa3991",
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72797d41",
+   "id": "e6b4e2ca",
    "metadata": {},
    "source": [
     "# Exercise: Sum digits (part 2)\n",
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "2ae94f6f",
+   "id": "0c82c4d8",
    "metadata": {
     "scrolled": true
    },
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "6e6f6ac6",
+   "id": "c7e3c229",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd5a333f",
+   "id": "fdcbc33f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6b82ffa",
+   "id": "dcd2dd8c",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e328b0d",
+   "id": "6f5233f7",
    "metadata": {},
    "source": [
     "# Data structure: List\n",
@@ -1370,7 +1370,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "c217cfe2",
+   "id": "59a943b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "8b6aa2e2",
+   "id": "c6689dac",
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "eb408373",
+   "id": "41c8a275",
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "ea3e7910",
+   "id": "c766e1d2",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "d831cedb",
+   "id": "29907007",
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1471,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "41b8c842",
+   "id": "a0c88d7c",
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "e1ca4d65",
+   "id": "98eb0111",
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "954aa472",
+   "id": "120a5c40",
    "metadata": {},
    "outputs": [
     {
@@ -1535,7 +1535,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "b8fb8c11",
+   "id": "6967e46e",
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "bb077129",
+   "id": "d7c31848",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "8a00d8fc",
+   "id": "128210fd",
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "2160d968",
+   "id": "7c063807",
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "f2fb23b6",
+   "id": "41b7ccf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1635,7 +1635,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "7fa90903",
+   "id": "eb8d2b7e",
    "metadata": {},
    "outputs": [
     {
@@ -1656,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "1d30c160",
+   "id": "35bc0b70",
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "e547f312",
+   "id": "30f32d05",
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1701,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "4b4b6291",
+   "id": "451900d6",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "5b1e0475",
+   "id": "bb26f59c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1737,7 +1737,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "4c0c8462",
+   "id": "6791d02d",
    "metadata": {},
    "outputs": [
     {
@@ -1758,7 +1758,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "537e287f",
+   "id": "467391c8",
    "metadata": {},
    "outputs": [
     {
@@ -1781,7 +1781,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "2b2f59ff",
+   "id": "25dae493",
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "e17eca3d",
+   "id": "92f2c410",
    "metadata": {},
    "outputs": [
     {
@@ -1827,7 +1827,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b9f5e26",
+   "id": "358d3c0a",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (list edition)\n",
@@ -1841,7 +1841,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "5b514381",
+   "id": "06db006f",
    "metadata": {},
    "outputs": [
     {
@@ -1878,7 +1878,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "72104082",
+   "id": "eb178369",
    "metadata": {},
    "outputs": [
     {
@@ -1903,7 +1903,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "14562b3f",
+   "id": "b84b4307",
    "metadata": {},
    "outputs": [
     {
@@ -1924,7 +1924,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "a01d6db0",
+   "id": "17d7db4e",
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1951,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "afe2e60f",
+   "id": "dc38f509",
    "metadata": {},
    "outputs": [
     {
@@ -1977,7 +1977,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "e4eb37bf",
+   "id": "8b20ca4b",
    "metadata": {},
    "outputs": [
     {
@@ -1998,7 +1998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60fa3f2b",
+   "id": "786efcf9",
    "metadata": {},
    "source": [
     "# Mutable vs. immutable data\n",
@@ -2011,7 +2011,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "101f3556",
+   "id": "6011a94a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2023,7 +2023,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "bc2da24f",
+   "id": "61078e99",
    "metadata": {},
    "outputs": [
     {
@@ -2049,7 +2049,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "ff9a16fe",
+   "id": "433a9978",
    "metadata": {},
    "outputs": [
     {
@@ -2078,7 +2078,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "7a021509",
+   "id": "8aab2b3a",
    "metadata": {},
    "outputs": [
     {
@@ -2100,7 +2100,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "0ca55b11",
+   "id": "6d73e26b",
    "metadata": {},
    "outputs": [
     {
@@ -2129,7 +2129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17f76e33",
+   "id": "0a8ba24a",
    "metadata": {},
    "source": [
     "# \"Changing\" is a bad term in Python\n",
@@ -2141,7 +2141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fffe7de4",
+   "id": "b88dba1f",
    "metadata": {},
    "source": [
     "# Exercise: Odds and evens\n",
@@ -2159,7 +2159,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "8158990a",
+   "id": "dfde03b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2169,7 +2169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83f77dd0",
+   "id": "3bec0bfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2181,7 +2181,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "4edbf3ff",
+   "id": "44063a6b",
    "metadata": {},
    "outputs": [
     {
@@ -2229,7 +2229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cdbbabc",
+   "id": "5f3a5a6f",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2241,12 +2241,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a79245cd",
+   "cell_type": "markdown",
+   "id": "661a8efc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# `break` vs. `continue`\n",
+    "\n",
+    "`break` means: Stop the loop. The entire loop. Do nothing more. That's it. End.\n",
+    "\n",
+    "- "
+   ]
   }
  ],
  "metadata": {
