--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ff4abd23",
+   "id": "4cc8a3da",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1d12e388",
+   "id": "2bf645f7",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8edcba50",
+   "id": "9078e4ee",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5130db1a",
+   "id": "c41d98f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06208645",
+   "id": "5e3d1bdf",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "60340d21",
+   "id": "20f3e398",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a581b0e",
+   "id": "12fc8bbd",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ffe6fd90",
+   "id": "b6afd464",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1bd5993",
+   "id": "058764b3",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1352f2d",
+   "id": "0b80112b",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "cf76a539",
+   "id": "513c834c",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b904df72",
+   "id": "5f5f1d6e",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6b1478be",
+   "id": "d58cf995",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "33e4a742",
+   "id": "922ea61c",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c9fa9ddd",
+   "id": "0caf2f4a",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7531e1d0",
+   "id": "934484f9",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ca9b3b29",
+   "id": "908093c0",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0c43ecc3",
+   "id": "a73fcd93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b74c4425",
+   "id": "f2167226",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "341e9544",
+   "id": "2a84eff6",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "199ae3f3",
+   "id": "7d16845e",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ec5a874f",
+   "id": "3f512a6e",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "cd079ac5",
+   "id": "5d2473db",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "f1248a3d",
+   "id": "37f0abd5",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "8e01a0e2",
+   "id": "3557e836",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "46c6894a",
+   "id": "1cc4f32b",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "a4965f22",
+   "id": "c4b724c4",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12d4050e",
+   "id": "f9248104",
    "metadata": {},
    "source": [
     "# Exercise: Name triangles\n",
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "96ef1ce1",
+   "id": "9c4af43d",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "70416022",
+   "id": "971dee51",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "04e4689b",
+   "id": "68b53738",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22b410c6",
+   "id": "14933b43",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "d56e087d",
+   "id": "6311b507",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "21f0c456",
+   "id": "9a3140f9",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcc3e7ba",
+   "id": "d7c401a1",
    "metadata": {},
    "source": [
     "# `while` loops\n",
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "632ad9d8",
+   "id": "f2244ab3",
    "metadata": {
     "scrolled": true
    },
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f26d5c06",
+   "id": "1c62a155",
    "metadata": {},
    "source": [
     "# Exercise: Sum to 100\n",
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "575930c5",
+   "id": "c2a5512b",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68dd39bf",
+   "id": "9abaa1d9",
    "metadata": {},
    "source": [
     "# `isdigit` is a *string* method\n",
@@ -979,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "7f4580e7",
+   "id": "e7c8cbd4",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44b820b0",
+   "id": "bb3b08c0",
    "metadata": {},
    "source": [
     "# Full list of methods on strings\n",
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "644315ad",
+   "id": "ee215030",
    "metadata": {},
    "source": [
     "# Controlling our loops\n",
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "2a505121",
+   "id": "5de5e87a",
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cd17f4b",
+   "id": "dd518758",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "06cbcaaa",
+   "id": "fb9a46bd",
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69cf0da4",
+   "id": "eb4dc497",
    "metadata": {},
    "source": [
     "# Exercise: Sum digits\n",
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "46aa3991",
+   "id": "2b5fd6c8",
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6b4e2ca",
+   "id": "e75687cc",
    "metadata": {},
    "source": [
     "# Exercise: Sum digits (part 2)\n",
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "0c82c4d8",
+   "id": "872b50bd",
    "metadata": {
     "scrolled": true
    },
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "c7e3c229",
+   "id": "e3dd8080",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdcbc33f",
+   "id": "c3653b87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcd2dd8c",
+   "id": "9b1f8791",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f5233f7",
+   "id": "9826044f",
    "metadata": {},
    "source": [
     "# Data structure: List\n",
@@ -1370,7 +1370,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "59a943b3",
+   "id": "e9f41080",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "c6689dac",
+   "id": "dff5b747",
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "41c8a275",
+   "id": "c3889762",
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "c766e1d2",
+   "id": "88f8847b",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "29907007",
+   "id": "754410f8",
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1471,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "a0c88d7c",
+   "id": "c6343fc6",
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "98eb0111",
+   "id": "d5bb3126",
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "120a5c40",
+   "id": "54ae5608",
    "metadata": {},
    "outputs": [
     {
@@ -1535,7 +1535,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "6967e46e",
+   "id": "4ff65eae",
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "d7c31848",
+   "id": "23dad949",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "128210fd",
+   "id": "6cabe32e",
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "7c063807",
+   "id": "6c050d84",
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "41b7ccf2",
+   "id": "c3b8d7d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1635,7 +1635,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "eb8d2b7e",
+   "id": "706296b9",
    "metadata": {},
    "outputs": [
     {
@@ -1656,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "35bc0b70",
+   "id": "0cc329d0",
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "30f32d05",
+   "id": "78716ebb",
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1701,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "451900d6",
+   "id": "dd047760",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "bb26f59c",
+   "id": "f7cb475d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1737,7 +1737,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "6791d02d",
+   "id": "ea312888",
    "metadata": {},
    "outputs": [
     {
@@ -1758,7 +1758,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "467391c8",
+   "id": "999d607a",
    "metadata": {},
    "outputs": [
     {
@@ -1781,7 +1781,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "25dae493",
+   "id": "a0ccb7e6",
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "92f2c410",
+   "id": "9943d63e",
    "metadata": {},
    "outputs": [
     {
@@ -1827,7 +1827,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "358d3c0a",
+   "id": "fdfd1073",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (list edition)\n",
@@ -1841,7 +1841,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "06db006f",
+   "id": "90f53333",
    "metadata": {},
    "outputs": [
     {
@@ -1878,7 +1878,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "eb178369",
+   "id": "e3d24690",
    "metadata": {},
    "outputs": [
     {
@@ -1903,7 +1903,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "b84b4307",
+   "id": "b45754b5",
    "metadata": {},
    "outputs": [
     {
@@ -1924,7 +1924,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "17d7db4e",
+   "id": "6133add0",
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1951,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "dc38f509",
+   "id": "fd53ffe6",
    "metadata": {},
    "outputs": [
     {
@@ -1977,7 +1977,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "8b20ca4b",
+   "id": "ecfc7407",
    "metadata": {},
    "outputs": [
     {
@@ -1998,7 +1998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "786efcf9",
+   "id": "e6fe6509",
    "metadata": {},
    "source": [
     "# Mutable vs. immutable data\n",
@@ -2011,7 +2011,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "6011a94a",
+   "id": "9202aaf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2023,7 +2023,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "61078e99",
+   "id": "97da788f",
    "metadata": {},
    "outputs": [
     {
@@ -2049,7 +2049,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "433a9978",
+   "id": "e724f662",
    "metadata": {},
    "outputs": [
     {
@@ -2078,7 +2078,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "8aab2b3a",
+   "id": "dc6ebf4a",
    "metadata": {},
    "outputs": [
     {
@@ -2100,7 +2100,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "6d73e26b",
+   "id": "28d78250",
    "metadata": {},
    "outputs": [
     {
@@ -2129,7 +2129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a8ba24a",
+   "id": "27df5cea",
    "metadata": {},
    "source": [
     "# \"Changing\" is a bad term in Python\n",
@@ -2141,7 +2141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b88dba1f",
+   "id": "c6859298",
    "metadata": {},
    "source": [
     "# Exercise: Odds and evens\n",
@@ -2159,7 +2159,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "dfde03b6",
+   "id": "d2960128",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2169,7 +2169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bec0bfe",
+   "id": "f2ec4ef8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2181,7 +2181,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "44063a6b",
+   "id": "a4521901",
    "metadata": {},
    "outputs": [
     {
@@ -2229,7 +2229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f3a5a6f",
+   "id": "9a870834",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2242,15 +2242,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "661a8efc",
+   "id": "a5cc752c",
    "metadata": {},
    "source": [
     "# `break` vs. `continue`\n",
     "\n",
-    "`break` means: Stop the loop. The entire loop. Do nothing more. That's it. End.\n",
+    "`break` means: Stop the loop. The entire loop. Do nothing more. That's it. End.  I normally use `break` if I've encountered a condition to leave the loop: I've found what I need, or I got input that indicates I should exit.\n",
     "\n",
-    "- "
+    "`continue` means: Stop this current iteration of the loop, but go onto the next iteration, assuming that there is one.  This doesn't actually exit from the loop. But it does skip over the rest of the loop body, and continues onto the next iteration.  `continue` is, in my experience, typically used when the current iteration isn't necessary, but future ones might be.  For example: I'm reading through a file, and find a comment line. Or I get input from the user, and it's invalid.\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff89e680",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
